--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -5,27 +5,41 @@
     <title>MEAN Stack</title>
     <script src="/vendor/angular/angular.min.js" type="text/javascript"></script>
     <script src="/assets/scripts/app.min.js" type="text/javascript"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    <link rel="stylesheet" href="views/css/style.css">
 
 </head>
 <body>
-    <div>
-        <h1>MEAN STACK APP</h1>
-    </div>
-    <div ng-controller="IndexController">
-        <p ng-show="cat.name">Your new cats name is: {{ cat.name }}</p>
-        <p ng-hide="cat.name">Enter your new cat's name!</p>
-
-        <form novalidate>
-            Name: <input type="text" ng-model="cat.name" /><br />
-            <input type="submit" ng-click="add(cat)" value="Save"/>
-        </form>
-
-        <h4>Cats</h4>
-        <ul>
-            <li ng-repeat="cat in cats">{{ cat.name }}</li>
-        </ul>
+    <div class="container">
+            <div class="jumbotron">
+                <h1>MEAN STACK APP</h1>
+                <h2>I CAN HAS CATZ?</h2>
+            </div>
     </div>
 
+    <div class="col-md-8 col-sm-offset-2 text-center">
+        <div ng-controller="IndexController">
+            <p ng-show="cat.name">Your new cats name is: {{ cat.name }}</p>
+            <p ng-hide="cat.name">Enter your new cat's name!</p>
+
+            <form novalidate>
+                Name: <input type="text" ng-model="cat.name" /><br />
+                <button type="button" ng-click="add(cat)" value="Save">
+                    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                </button>
+            </form>
+            </form>
+
+            <div class="col-md-4 col-sm-offset-4">
+                <h4>Cats</h4>
+                    <ul>
+                        <li ng-repeat="cat in cats">{{ cat.name }}</li>
+                    </ul>
+            </div>
+        </div>
+    </div>
 
 </body>
 </html>
